--- a/css/style.css
+++ b/css/style.css
@@ -52,17 +52,76 @@ header nav ul li:hover {
     transition: background-color 0.3s ease; /* เพิ่ม transition */
 }
 
-   main {
+main {
     padding: 2rem;
-    max-width: 800px;
+    max-width: 700px;
     margin: 0 auto;
-   }
-   footer {
-    background: #333;
-    color: #fff;
+}
+
+.overview, .highlights {
+    padding: 20px;
     text-align: center;
-    padding: 1rem;
-    position: fixed;
-    bottom: 0;
+}
+
+.overview img {
+    margin-top: 10px;
+    border-radius: 8px;
+}
+
+.highlights {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    position: relative; 
+
+}
+
+.highlight-item {
+    width: 300px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    position: relative; 
+}
+.highlight-item h2 {
+    position: absolute; 
+    top: 0; 
+    left: 50%; 
+    transform: translateX(-50%); 
+    margin: 0; 
     width: 100%;
-   }
+    background-color: rgba(255, 154, 252, 0.5); 
+    color: #fff;
+    text-align: center; 
+    font-size: 1.5rem; 
+    padding: 0.5rem 0; 
+    z-index: 1; 
+}
+
+
+.highlight-item img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.highlight-item h3 {
+    margin: 10px 0;
+    font-size: 1.2em;
+}
+
+.highlight-item p {
+    padding: 0 10px 10px;
+    font-size: 0.9em;
+}
+
+footer {
+    text-align: center;
+    padding: 10px;
+    background-color: #ff8edf;
+    color: #fff;
+    margin-top: 20px;
+}
