--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ header nav ul li:hover {
 
 main {
     padding: 2rem;
-    max-width: 700px;
+    max-width: 900px;
     margin: 0 auto;
 }
 
@@ -105,7 +105,12 @@ h1 {
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    position: relative; 
+    position: relative;
+    width: 30%; /* สามารถปรับความกว้างได้ตามต้องการ */
+    transition: transform 0.3s ease-in-out; 
+}
+.highlight-item:hover {
+    transform: scale(1.05); /* ขยาย 5% เมื่อเมาส์ชี้ */
 }
 .highlight-item h2 {
     position: absolute; 
@@ -145,4 +150,47 @@ footer {
     background-color: #ff8edf;
     color: #fff;
     margin-top: 20px;
+}
+
+.tourist-spots {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 30px; 
+}
+
+.tourist-spot {
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: center; 
+}
+
+.tourist-spot img {
+    width: 50%;
+    height: auto;
+    border-radius: 8px;
+    object-fit: cover; 
+    margin-bottom: 1rem; 
+}
+
+
+.tourist-spot h3 {
+    font-size: 1.5rem;
+    margin-top: 0.5rem;
+}
+
+
+.tourist-spot p {
+    font-size: 1rem;
+    color: #555;
+}
+
+
+.tourist-spot:not(:last-child) {
+    margin-bottom: 2rem; 
+}
+
+.highlight-text {
+    color: #000000; 
 }
