--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,7 @@ footer {
 
 
 .message {
+    text-align: center;
     width: 60%;
     margin: 0 auto; 
     padding: 20px;
@@ -238,3 +239,29 @@ button:hover {
 td {
     padding: 10px;
 }
+
+h2 {
+    color: #ff00ae;
+}
+@media (max-width: 768px) {
+    .grid-container {
+    grid-template-areas:
+    "header header"
+    "nav nav"
+    "main sidebar"
+    "footer footer";
+    grid-template-columns: 1fr 200px;
+    }
+   }
+   /* สําหรับมือถือ */
+   @media (max-width: 480px) {
+    .grid-container {
+    grid-template-areas:
+    "header"
+    "nav"
+    "main"
+    "sidebar"
+    "footer";
+    grid-template-columns: 1fr;
+    }
+   }
